syntax = "proto3";
package seiprotocol.seichain.dex;

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";
import "dex/order.proto"; 
import "dex/settlement.proto"; 
import "gogoproto/gogo.proto";

message MatchResult {
    int64 height = 1 [(gogoproto.jsontag) = "height"];
    string contractAddr = 2 [(gogoproto.jsontag) = "contract_address"];
    repeated Order orders = 3 [(gogoproto.jsontag) = "orders"];
    repeated SettlementEntry settlements = 4 [(gogoproto.jsontag) = "settlements"];
    repeated Cancellation cancellations = 5 [(gogoproto.jsontag) = "cancellations"];
}